Tweak the font stack to avoid linebreaks in navbar
Trebuchet is available on {i,mac,chrome}OS, and it’s not as wide as their
default ‘system-ui’ or sans-serif font. As a result, on an iPad Mini in
landscape mode (for instance), the top navbar can fit on a single line.
Before: https://www.webpagetest.org/results/18/11/18/MX/b4710834e293eace00fc8ab03a671018/1_screen.jpg
After: https://www.webpagetest.org/results/18/11/19/3C/b5ff592f52b0e4f13d4076fb9ea48fb6/1_screen.jpg

Ubuntu & Cantarell (default font on, respectively, Ubuntu & Fedora) are not
too wide too, and they are better looking than Trebuchet in my opinion.

‘system-ui’ was removed. First, because it’s hardly useful anymore, the font
stack is more explicit & complete. Second, it’s not reliable: on Xubuntu 16.04,
Firefox resolves it to Liberation, when the actual font used by XFCE is Noto
Sans (may just be a Firefox defect though — Firefox on Linux is a joke.)

Related commit: 1230e0ce0ce0fe5580ce16d5b1b93bc8c5b48ef0.

--- a/src/site.css
+++ b/src/site.css
@@ -71,13 +71,12 @@ footer > p {
     margin: .375em var(--horizon-space); /* flexbox children margins don’t collapse */
 }
 
-
 /*******************************************************************************
  * Typography (more legible than user-agent defaults).
  */
 html {
     font: -apple-system-body; /* for size&weight; https://tinyurl.com/apple-system-font */
-    font-family: "segoe ui", system-ui, sans-serif;
+    font-family: "segoe ui", ubuntu, cantarell, "trebuchet ms", sans-serif;
 
     letter-spacing: .05ch; /* https://tinyurl.com/spacing-dyslexia */
     line-height: 1.5;
